--- a/index.css
+++ b/index.css
@@ -97,7 +97,7 @@ html
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	color: white;
-	/*border: 2px red groove;*/
+	border: 2px blue groove;
 	padding-left: 5%;
 	padding-right: 5%;
 }
@@ -121,6 +121,7 @@ html
 	right:5%;
 	bottom:21%;
 	display: inline-block;
+	border:  1px red groove;
 }
 
 .fader1
