--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -1,3 +1,4 @@
+
 html
 {
 	background: url('Images/Flightcase4.png');
@@ -7,7 +8,17 @@ html
     width:100%;
     height:100%;
 }
-
+h1,h2,h3,h4
+{
+	font-family: 'A_Love_of_Thunder';
+	font-style: normal;
+	font-size: 1.5em;
+}
+p{
+	font-size: 1.5em;
+	font-style: normal;
+	font-family: 'Old Standard TT';
+}
 #Container1, #BlocTexte, .LED1, .LED2, .LED3, .LED4
 {
 	display: none;
