--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -13,6 +13,8 @@ h1,h2,h3,h4
 	font-family: 'A_Love_of_Thunder';
 	font-style: normal;
 	font-size: 1.5em;
+	margin-bottom: -20px;
+	margin-top: -0px;
 }
 p{
 	font-size: 1.5em;
