--- a/index.css
+++ b/index.css
@@ -19,22 +19,22 @@ html
 h1,h2,h3,h4
 {
 	font-family: 'A_Love_of_Thunder';
-	font-size: 3em;
-	margin-bottom: -20px;
+	font-size: 2.5em;
+	margin-bottom: -15px;
 	margin-top: -10px;
 }
 p{
-	font-size: 1.5em;
+	font-size: 1.3em;
 	font-family: 'Old Standard TT';
 }
 .iframe
 {
-	position: absolute;
+	position: relative;
 	right:0%;
 	top: 0%;
 	border:0;
-	width:300px;
-	height:200px;
+	width:100%;
+	height:300px;
 }
 #etiquette1
 {
@@ -120,18 +120,18 @@ p{
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	color: white;
-	border: 2px blue groove;
+	border: 2px red groove;
 	padding-left: 5%;
 	padding-right: 5%;
 }
 .categorie
 {
 	position: absolute;
-	top: 9%;
-	bottom: 9.5%;
+	top: 10%;
+	bottom: 10%;
 	left: 9%;
 	right: 9%;
-	border: 2px green groove;
+
 	padding-left: 2px;
 	padding-right: 2px;
 	overflow: scroll;
@@ -144,9 +144,14 @@ p{
 	right:5%;
 	bottom:21%;
 	display: inline-block;
-	border:  1px red groove;
+	border: 2px blue groove;
 }
-
+.facebook
+{
+	position: absolute;
+	top: 85%;
+	left: 2%;
+}
 .fader1
 {
 	position: absolute;
@@ -247,13 +252,6 @@ p{
 {
 	width: auto ;
 	height: 300px;
-}
-#infos_contact{
-	position: relative;
-	margin-top: 150px;
-	height: 200px;
-	width: 99.8%;
-
 }
 #responsive
 {
