--- a/index.css
+++ b/index.css
@@ -38,9 +38,10 @@ p{
 }
 .fermer
 {
-	position: relative;
-	top: -10%;
-	left: 85%;
+
+	position: absolute;
+	top: -20px;
+	left: 80%;
 	
 	height: 50px;
 	width: 100px;
