--- a/index.css
+++ b/index.css
@@ -36,22 +36,14 @@ p{
 	width:100%;
 	height:300px;
 }
-.fermer
-{
-
-	position: absolute;
-	top: -20px;
-	left: 80%;
-	
-	height: 50px;
-	width: 100px;
-	color: red;
-}
 .croixrouge
 {
-	float: right;
-	width: 21%;
-	height: 21%;
+	position: absolute;
+	top: 14%;
+	left: 96.5%;
+	height: 2.5%;
+	width: 2.5%;
+	z-index: 1;
 }
 #etiquette1
 {
